--- a/SmallHoneybee/SmallHoneybee.Wpf/App.config
+++ b/SmallHoneybee/SmallHoneybee.Wpf/App.config
@@ -31,6 +31,7 @@
   </entityFramework>
   <connectionStrings>
     <add name="SmallHoneybeeEntities" connectionString="metadata=res://*/Model.Model.csdl|res://*/Model.Model.ssdl|res://*/Model.Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;Character Set=utf8;user id=root;password=12345;persistsecurityinfo=True;database=smallhoneybee&quot;" providerName="System.Data.EntityClient" />
+    <add name="SmallHoneybeeAdoNet" connectionString="server=localhost;user id=root;password=12345;persistsecurityinfo=True;database=smallhoneybee;Charset=utf8" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <log4net>
     <logger name="logerror">
