Add day book and system setting.

--- a/SmallHoneybee/SmallHoneybee.DataModel/SmallHoneybee.DataModel.csproj
+++ b/SmallHoneybee/SmallHoneybee.DataModel/SmallHoneybee.DataModel.csproj
@@ -58,6 +58,9 @@
     <Compile Include="Model\Category.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="Model\DayBook.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="Model\Model.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -92,6 +95,9 @@
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Model\SOProduce.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\SystemSetting.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Model\User.cs">
