--- a/SmallHoneybee/SmallHoneybee.EF.Data/SmallHoneybee.EF.Data.csproj
+++ b/SmallHoneybee/SmallHoneybee.EF.Data/SmallHoneybee.EF.Data.csproj
@@ -59,9 +59,11 @@
     <Compile Include="IUnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositoryBase.cs" />
+    <Compile Include="Repository\IDayBookRepository.cs" />
     <Compile Include="Repository\Impl\CategoryRepository.cs" />
     <Compile Include="Repository\Impl\POItemRepository.cs" />
     <Compile Include="Repository\Impl\SOProduceRepository.cs" />
+    <Compile Include="Repository\Impl\DayBookRepository.cs" />
     <Compile Include="Repository\Impl\UserRepository.cs" />
     <Compile Include="Repository\Impl\SaleOrderRepository.cs" />
     <Compile Include="Repository\Impl\PurchaseOrderRepository.cs" />
