--- a/SmallHoneybee/SmallHoneybee.Wpf/SmallHoneybee.Wpf.csproj
+++ b/SmallHoneybee/SmallHoneybee.Wpf/SmallHoneybee.Wpf.csproj
@@ -96,9 +96,11 @@
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
+    <Reference Include="UIAutomationProvider" />
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\CommonHelper.cs" />
@@ -126,6 +128,9 @@
     </Compile>
     <Compile Include="Views\Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\PrintWindow.xaml.cs">
+      <DependentUpon>PrintWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Produce.xaml.cs">
       <DependentUpon>Produce.xaml</DependentUpon>
@@ -279,6 +284,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Views\PrintWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\Produce.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -332,6 +341,8 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Report\SaleOrderDetail.rdlc" />
     <None Include="packages.config" />
+    <None Include="Properties\DataSources\SmallHoneybee.DataModel.Model.SaleOrder.datasource" />
+    <None Include="Properties\DataSources\SmallHoneybee.Wpf.Views.BalanceDomainModel.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>PublicSettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
