Modify some style.

--- a/SmallHoneybee/SmallHoneybee.DataModel/SmallHoneybee.DataModel.csproj
+++ b/SmallHoneybee/SmallHoneybee.DataModel/SmallHoneybee.DataModel.csproj
@@ -129,7 +129,9 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="DataModel-Description.txt" />
+  </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
