--- a/SmallHoneybee/SmallHoneybee.Wpf/Properties/Settings.settings
+++ b/SmallHoneybee/SmallHoneybee.Wpf/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="Login" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="GeneralMangerMaxDiscountPrice" Type="System.Int64" Scope="Application">
+      <Value Profile="(Default)">100</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
