--- a/SmallHoneybee/SmallHoneybee.Wpf/SmallHoneybee.Wpf.csproj
+++ b/SmallHoneybee/SmallHoneybee.Wpf/SmallHoneybee.Wpf.csproj
@@ -73,6 +73,11 @@
     <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention">
       <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.ReportViewer.WinForms, Version=9.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Program Files (x86)\Microsoft Visual Studio 12.0\ReportViewer\Microsoft.ReportViewer.WinForms.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="MySql.Data, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <Private>True</Private>
       <HintPath>..\packages\MySql.Data.6.9.8\lib\net45\MySql.Data.dll</HintPath>
@@ -118,6 +123,8 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
+    <Compile Include="Report\ReportPrint.cs" />
+    <Compile Include="Report\SaleOrderReportModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
     <Compile Include="Views\BalanceFrom.xaml.cs">
@@ -339,10 +346,14 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="Report\SaleOrderDetail.rdlc" />
+    <EmbeddedResource Include="Report\SaleOrderDetail.rdlc">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
     <None Include="packages.config" />
-    <None Include="Properties\DataSources\SmallHoneybee.DataModel.Model.SaleOrder.datasource" />
-    <None Include="Properties\DataSources\SmallHoneybee.Wpf.Views.BalanceDomainModel.datasource" />
+    <None Include="Properties\DataSources\SmallHoneybee.Wpf.Report.SaleOrderReportModel.datasource" />
+    <None Include="Properties\DataSources\SmallHoneybee.Wpf.Report.SaleOrderReportModel1.datasource" />
+    <None Include="Properties\DataSources\SmallHoneybee.Wpf.Report.SaleOrderReportModel2.datasource" />
+    <None Include="Properties\DataSources\SmallHoneybee.Wpf.Report.SaleOrderReportModel3.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>PublicSettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -393,6 +404,7 @@
   <ItemGroup>
     <Resource Include="ico_samllhoneybee.ico" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
