--- a/SmallHoneybee/SmallHoneybee.Wpf/packages.config
+++ b/SmallHoneybee/SmallHoneybee.Wpf/packages.config
@@ -4,6 +4,7 @@
   <package id="CsvHelper" version="2.7.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="log4net" version="2.0.3" targetFramework="net45" />
+  <package id="Microsoft.Report.Viewer" version="11.0.0.0" targetFramework="net45" />
   <package id="MvvmLight" version="5.2.0.0" targetFramework="net45" />
   <package id="MvvmLightLibs" version="5.2.0.0" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.8" targetFramework="net45" />
