--- a/SmallHoneybee/SmallHoneybee.Wpf/App.config
+++ b/SmallHoneybee/SmallHoneybee.Wpf/App.config
@@ -4,9 +4,6 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="SmallHoneybee.Wpf.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    </sectionGroup>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="SmallHoneybee.Wpf.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
@@ -74,16 +71,7 @@
       <remove invariant="MySql.Data.MySqlClient" />
       <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
     </DbProviderFactories>
-  </system.data><applicationSettings>
-    <SmallHoneybee.Wpf.Properties.Settings>
-      <setting name="MemberPointsRate" serializeAs="String">
-        <value>10</value>
-      </setting>
-      <setting name="GeneralMangerMaxDiscountPrice" serializeAs="String">
-        <value>100</value>
-      </setting>
-    </SmallHoneybee.Wpf.Properties.Settings>
-  </applicationSettings>
+  </system.data>
   <userSettings>
     <SmallHoneybee.Wpf.Properties.Settings>
       <setting name="Login" serializeAs="String">
