update the version to 2016.03.09.1

--- a/SmallHoneybee/SmallHoneybee.EF.Data/SmallHoneybee.EF.Data.csproj
+++ b/SmallHoneybee/SmallHoneybee.EF.Data/SmallHoneybee.EF.Data.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Repository\Impl\SOProduceRepository.cs" />
     <Compile Include="Repository\Impl\DayBookRepository.cs" />
     <Compile Include="Repository\Impl\SytemSettingRepository.cs" />
+    <Compile Include="Repository\Impl\MemberCardRepository.cs" />
     <Compile Include="Repository\Impl\UserRepository.cs" />
     <Compile Include="Repository\Impl\SaleOrderRepository.cs" />
     <Compile Include="Repository\Impl\PurchaseOrderRepository.cs" />
@@ -73,6 +74,7 @@
     <Compile Include="Repository\IPOItemRepository.cs" />
     <Compile Include="Repository\ISOProduceRepository.cs" />
     <Compile Include="Repository\ISystemSetting.cs" />
+    <Compile Include="Repository\IMemberCardRepository.cs" />
     <Compile Include="Repository\IUserRepository.cs" />
     <Compile Include="Repository\ISaleOrderRepository.cs" />
     <Compile Include="Repository\IPurchaseOrderRepository.cs" />
